<?xml version="1.0"?>
<package format="2">
  <name>parameter_manager</name>
  <version>0.0.0</version>
  <description>The parameter_manager package</description>
  <maintainer email="yuma.nihei@tier4.jp">yn</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
